# apk

./: LICENSE  README.md
.github/workflows/: android.yml
aimeproject/: LICENSE  pyproject.toml
aimeproject/.GitHub/workflows/: android.yml
aimeproject/SRC/aimebot/: app.py
github/workflows/: build.yml  pyproject.toml
